# osservatorioseo

./: .env.example  .gitignore  .ruff.toml  README.md  cloudflare-methodology.md  package-lock.json  package.json  pyproject.toml  tailwind_input.css
config/: doc_watcher.yml  google_financials.yaml  pillars.yml  sources.yml  tracker_platforms.yaml
data/: config_snapshot.json  feed.json
scripts/: backfill_google_blog.py  backfill_google_financials.py  generate_deep_analysis.py  generate_pillar.py  normalize_archive_tags.py  rebuild_seo_html.py  update_google_financials.py  update_pillars.py  update_tracker.py
site/: _redirects  app.js  archive.html  archive.js  docs.html  docs.js  feed.xml  index.html  nav-search.js  robots.txt  sitemap-news.xml  sitemap.xml  styles.css  tailwind.css
templates/: feed.xml.jinja  layout.html.jinja  robots.txt.jinja  sitemap.xml.jinja  sitemap_news.xml.jinja
tests/: conftest.py  test_config.py  test_doc_watcher.py  test_doc_watcher_state.py  test_edgar_client.py  test_google_financials_collector.py  test_google_financials_models.py  test_health.py  test_http_client.py  test_models.py  test_normalizer.py  test_pipeline_doc_change_state.py  test_pipeline_smoke.py  test_playwright_fetcher.py  test_publisher.py  test_ranker.py  test_renderer.py  test_rss_fetcher.py  test_scraper_fetcher.py  test_seo.py  test_slug.py  test_summarizer.py  test_tracker_charts.py  test_tracker_collector.py  test_tracker_models.py  test_tracker_pages_analytics.py  test_tracker_publisher.py  test_tracker_radar_client.py  test_tracker_renderer.py  (+2 more)
(+873 files in other folders)
