[project]
name = "osservatorio-seo"
version = "0.1.0"
description = "Hub giornaliero di notizie SEO e AI da fonti autorevoli"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "selectolax>=0.3",
    "beautifulsoup4>=4.12",
    "playwright>=1.45",
    "html2text>=2024.2",
    "pdfplumber>=0.11",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "trendspy>=0.1.6",
    "rapidfuzz>=3.9",
    "python-dateutil>=2.9",
    "jinja2>=3.1",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
osservatorio-seo = "osservatorio_seo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
